# modern_cpp_notes

./: 0.ds.md  1.constexpr.md  2.template.md  3.runtime.md  4.pointer.md  5.parallelism&concurrency.md  6.STL&container.md  7.other.md  9.interview.md  CMakeLists.txt  README.md  name_duplicates.cpp  test.cpp
.cache/clangd/index/: main.cpp.DCC1CF9456E06635.idx  test.cpp.D90C81625241FE83.idx
0-DS&alg/: 1.tree.md  2.graph.md  3.STL&container.md  3.container.md  4.STLalg.md  containers.cpp
1-LanguageFoundations/: 1.class.md  2.static_constexpr.md  3.auto_type.md  4.structured_binding.md  5.template.md  6.exception.md
2-Usability/: 1.lambda.md  2.std::function.md
3-Pointer/: 1.value_type.md  2.unique_ptr.md  3.shared_ptr.md  4.weak_ptr.md  pointer.cpp
4-Parallelism&Concurrency/: 1.principle.md  2.lock-free.md  3.promise&future.md  4.async&packaged_task.md  async_packaged_taks.cpp  my_pool.cpp  promise_future.cpp
5-Other/: 1.other.md  9.interview.md  capacity_test.cpp  tests.cpp
6-Linux/: 1.process&thread.md  kernel.md  pf_demo.c  test.c  thread  thread.c
Part2-Usability/: main.cpp  stest.cpp
other/: duplicates.cpp  name_duplicates.txt
